# brasildocs

./: LICENSE  README.md  pyproject.toml
src/brasildocs/: __init__.py  cnpj.py  cpf.py  pis.py
tests/: test_cnpj.py  test_cpf.py
