[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brasildocs"
version = "0.1.0"
description = "Validação e geração de documentos brasileiros"
authors = [{ name = "Heitor", email = "ahtorie75@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]